--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     Favicons
     =============================================
     -->
-    <link rel="apple-touch-icon" sizes="57x57" href="assets/images/favicons/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="assets/images/favicons/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="assets/images/favicons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/images/favicons/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="assets/images/favicons/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="assets/images/favicons/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="assets/images/favicons/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/images/favicons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/images/favicons/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/favicons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/favicons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/favicons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/favicons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/favicons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="images/favicons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="assets/images/favicons/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="images/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!--
     Stylesheets
@@ -36,22 +36,22 @@
 
     -->
     <!-- Default stylesheets-->
-    <link href="assets/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Template specific stylesheets-->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Volkhov:400i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
-    <link href="assets/lib/animate.css/animate.css" rel="stylesheet">
-    <link href="assets/lib/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="assets/lib/et-line-font/et-line-font.css" rel="stylesheet">
-    <link href="assets/lib/flexslider/flexslider.css" rel="stylesheet">
-    <link href="assets/lib/owl.carousel/dist/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="assets/lib/owl.carousel/dist/assets/owl.theme.default.min.css" rel="stylesheet">
-    <link href="assets/lib/magnific-popup/dist/magnific-popup.css" rel="stylesheet">
-    <link href="assets/lib/simple-text-rotator/simpletextrotator.css" rel="stylesheet">
+    <link href="lib/animate.css/animate.css" rel="stylesheet">
+    <link href="lib/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="lib/et-line-font/et-line-font.css" rel="stylesheet">
+    <link href="lib/flexslider/flexslider.css" rel="stylesheet">
+    <link href="lib/owl.carousel/dist/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="lib/owl.carousel/dist/assets/owl.theme.default.min.css" rel="stylesheet">
+    <link href="lib/magnific-popup/dist/magnific-popup.css" rel="stylesheet">
+    <link href="lib/simple-text-rotator/simpletextrotator.css" rel="stylesheet">
     <!-- Main stylesheet and color file-->
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link id="color-scheme" href="assets/css/colors/default.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link id="color-scheme" href="css/colors/default.css" rel="stylesheet">
   </head>
   <body data-spy="scroll" data-target=".onpage-navigation" data-offset="60">
     <main>
@@ -95,7 +95,7 @@
               <!--            .navbar-cart-item.clearfix-->
               <!--                .navbar-cart-img-->
               <!--                    a(href='#')-->
-              <!--                        img(src='assets/images/shop/product-9.jpg', alt='')-->
+              <!--                        img(src='images/shop/product-9.jpg', alt='')-->
               <!--                .navbar-cart-title-->
               <!--                    a(href='#') Short striped sweater-->
               <!--                    |-->
@@ -107,7 +107,7 @@
               <!--            .navbar-cart-item.clearfix-->
               <!--                .navbar-cart-img-->
               <!--                    a(href='#')-->
-              <!--                        img(src='assets/images/shop/product-10.jpg', alt='')-->
+              <!--                        img(src='images/shop/product-10.jpg', alt='')-->
               <!--                .navbar-cart-title-->
               <!--                    a(href='#') Colored jewel rings-->
               <!--                    |-->
@@ -141,7 +141,7 @@
           </div>
         </div>
       </nav>
-      <section class="home-section home-full-height bg-dark-30" id="home" data-background="assets/images/section-55.mp4">
+      <section class="home-section home-full-height bg-dark-30" id="home" data-background="images/section-55.mp4">
         <div class="video-player" data-property="{videoURL:'https://youtu.be/zpZQQt7e3Z4', containment:'.home-section', startAt:1, mute:false, autoPlay:true, loop:true, opacity:1, showControls:false, showYTLogo:false, vol:25}"></div>
         <div class="video-controls-box">
           <div class="container">
@@ -179,37 +179,37 @@
           </div>
           <ul class="works-grid works-grid-gut works-grid-3 works-hover-w" id="works-grid">
             <li class="work-item illustration webdesign"><a href="portfolio_single_featured_image1.html">
-                <div class="work-image"><img src="assets/images/portfolio/nastyhumanz1.jpg" alt="Portfolio Item"/></div>
+                <div class="work-image"><img src="images/portfolio/nastyhumanz1.jpg" alt="Portfolio Item"/></div>
                 <div class="work-caption font-alt">
                   <h3 class="work-title">NASTYHUMANZ</h3>
                   <div class="work-descr">THE NASTY BASH</div>
                 </div></a></li>
             <li class="work-item marketing photography"><a href="portfolio_single_featured_image2.html">
-                <div class="work-image"><img src="assets/images/portfolio/ef1.jpg" alt="Portfolio Item"/></div>
+                <div class="work-image"><img src="images/portfolio/ef1.jpg" alt="Portfolio Item"/></div>
                 <div class="work-caption font-alt">
                   <h3 class="work-title">ELECTRIC FOREST</h3>
                   <div class="work-descr">Rothbury, MI, 2017</div>
                 </div></a></li>
             <li class="work-item illustration photography"><a href="portfolio_single_featured_slider1.html">
-                <div class="work-image"><img src="assets/images/portfolio/dirtyaudio1.jpg" alt="Portfolio Item"/></div>
+                <div class="work-image"><img src="images/portfolio/dirtyaudio1.jpg" alt="Portfolio Item"/></div>
                 <div class="work-caption font-alt">
                   <h3 class="work-title">DIRTY AUDIO</h3>
                   <div class="work-descr">ELECTRIC MASQUERADE</div>
                 </div></a></li>
             <li class="work-item marketing photography"><a href="portfolio_single_featured_slider2.htmll">
-                <div class="work-image"><img src="assets/images/portfolio/pl2.jpg" alt="Portfolio Item"/></div>
+                <div class="work-image"><img src="images/portfolio/pl2.jpg" alt="Portfolio Item"/></div>
                 <div class="work-caption font-alt">
                   <h3 class="work-title">PHOENIX LIGHTS</h3>
                   <div class="work-descr">PHOENIX, AZ, 2018</div>
                 </div></a></li>
             <li class="work-item illustration webdesign"><a href="portfolio_single_featured_video1.html">
-                <div class="work-image"><img src="assets/images/portfolio/lib3.jpg" alt="Portfolio Item"/></div>
+                <div class="work-image"><img src="images/portfolio/lib3.jpg" alt="Portfolio Item"/></div>
                 <div class="work-caption font-alt">
                   <h3 class="work-title">LIGHTNING IN A BOTTLE</h3>
                   <div class="work-descr">Lake San Antonio,CA,2017</div>
                 </div></a></li>
             <li class="work-item marketing webdesign"><a href="portfolio_single_featured_video2.html">
-                <div class="work-image"><img src="assets/images/portfolio/gem1.jpg" alt="Portfolio Item"/></div>
+                <div class="work-image"><img src="images/portfolio/gem1.jpg" alt="Portfolio Item"/></div>
                 <div class="work-caption font-alt">
                   <h3 class="work-title">GEM AND JAM</h3>
                   <div class="work-descr">Tucson,AZ,2017</div>
@@ -267,7 +267,7 @@
           </div>
         </section>
 
-        <section class="module bg-dark-60 pt-0 pb-0 parallax-bg testimonial" data-background="assets/images/PRICE1.jpg">
+        <section class="module bg-dark-60 pt-0 pb-0 parallax-bg testimonial" data-background="images/PRICE1.jpg">
           <div class="testimonials-slider pt-140 pb-140">
             <ul class="slides">
               <li>
@@ -358,7 +358,7 @@
             <div class="row">
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-3" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="assets/images/josh5.jpg" alt="Member Photo"/>
+                  <div class="team-image"><img src="images/josh5.jpg" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Oh hello</h5>
                       <p class="font-serif">I like food puns</p>
@@ -373,7 +373,7 @@
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-3" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="assets/images/CHAN1.jpg" alt="Member Photo"/>
+                  <div class="team-image"><img src="images/CHAN1.jpg" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Good day sir!</h5>
                       <p class="font-serif"> I specialize in lifestyle photography and am currently DOP over at Medicine Man gallery, in Tucson AZ.</p>
@@ -388,7 +388,7 @@
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-3" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="assets/images/team-3.jpg" alt="Member Photo"/>
+                  <div class="team-image"><img src="images/team-3.jpg" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Hello</h5>
                       <p class="font-serif">We're currently hiring for a graphic designer!</p>
@@ -403,7 +403,7 @@
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-3" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="assets/images/team-4.jpg" alt="Member Photo"/>
+                  <div class="team-image"><img src="images/team-4.jpg" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Yes, this could be you</h5>
                       <p class="font-serif">Looking for a second shooter based out of Tucson or Phoenix AZ!</p>
@@ -420,7 +420,7 @@
           </div>
         </section>
 
-        <section class="module bg-dark-60 bg-dark parallax-bg pricing-page-header" data-background="assets/images/ML1.jpg">
+        <section class="module bg-dark-60 bg-dark parallax-bg pricing-page-header" data-background="images/ML1.jpg">
           <div class="container">
             <div class="row">
               <div class="col-sm-6 col-sm-offset-3">
@@ -550,18 +550,18 @@
     JavaScripts
     =============================================
     -->
-    <script src="assets/lib/jquery/dist/jquery.js"></script>
-    <script src="assets/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="assets/lib/wow/dist/wow.js"></script>
-    <script src="assets/lib/jquery.mb.ytplayer/dist/jquery.mb.YTPlayer.js"></script>
-    <script src="assets/lib/isotope/dist/isotope.pkgd.js"></script>
-    <script src="assets/lib/imagesloaded/imagesloaded.pkgd.js"></script>
-    <script src="assets/lib/flexslider/jquery.flexslider.js"></script>
-    <script src="assets/lib/owl.carousel/dist/owl.carousel.min.js"></script>
-    <script src="assets/lib/smoothscroll.js"></script>
-    <script src="assets/lib/magnific-popup/dist/jquery.magnific-popup.js"></script>
-    <script src="assets/lib/simple-text-rotator/jquery.simple-text-rotator.min.js"></script>
-    <script src="assets/js/plugins.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="lib/jquery/dist/jquery.js"></script>
+    <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="lib/wow/dist/wow.js"></script>
+    <script src="lib/jquery.mb.ytplayer/dist/jquery.mb.YTPlayer.js"></script>
+    <script src="lib/isotope/dist/isotope.pkgd.js"></script>
+    <script src="lib/imagesloaded/imagesloaded.pkgd.js"></script>
+    <script src="lib/flexslider/jquery.flexslider.js"></script>
+    <script src="lib/owl.carousel/dist/owl.carousel.min.js"></script>
+    <script src="lib/smoothscroll.js"></script>
+    <script src="lib/magnific-popup/dist/jquery.magnific-popup.js"></script>
+    <script src="lib/simple-text-rotator/jquery.simple-text-rotator.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
