--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                   <h3 class="work-title">NASTYHUMANZ</h3>
                   <div class="work-descr">THE NASTY BASH</div>
                 </div></a></li>
-            <li class="work-item marketing photography"><a href="portfolio_single_featured_image1.html">
+            <li class="work-item illustration photography"><a href="portfolio_single_featured_image1.html">
                 <div class="work-image"><img src="images/portfolio/ef1.jpg" alt="Portfolio Item"/></div>
                 <div class="work-caption font-alt">
                   <h3 class="work-title">ELECTRIC FOREST</h3>
