--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                   <div class="work-descr">THE NASTY BASH</div>
                 </div></a></li>
             <li class="work-item illustration photography"><a href="portfolio_single_featured_image1.html">
-                <div class="work-image"><img src="images/portfolio/ef1.jpg" alt="Portfolio Item"/></div>
+                <div class="work-image"><img src="images/portfolio/dirtyaudio1.jpg" alt="Portfolio Item"/></div>
                 <div class="work-caption font-alt">
                   <h3 class="work-title">ELECTRIC FOREST</h3>
                   <div class="work-descr">Rothbury, MI, 2017</div>
@@ -197,19 +197,19 @@
                   <div class="work-descr">ELECTRIC MASQUERADE</div>
                 </div></a></li>
             <li class="work-item marketing photography"><a href="portfolio_single_featured_slider2.htmll">
-                <div class="work-image"><img src="images/portfolio/pl2.jpg" alt="Portfolio Item"/></div>
+                <div class="work-image"><img src="images/portfolio/dirtyaudio1.jpg" alt="Portfolio Item"/></div>
                 <div class="work-caption font-alt">
                   <h3 class="work-title">PHOENIX LIGHTS</h3>
                   <div class="work-descr">PHOENIX, AZ, 2018</div>
                 </div></a></li>
             <li class="work-item illustration webdesign"><a href="portfolio_single_featured_video1.html">
-                <div class="work-image"><img src="images/portfolio/lib3.jpg" alt="Portfolio Item"/></div>
+                <div class="work-image"><img src="images/portfolio/dirtyaudio1.jpg" alt="Portfolio Item"/></div>
                 <div class="work-caption font-alt">
                   <h3 class="work-title">LIGHTNING IN A BOTTLE</h3>
                   <div class="work-descr">Lake San Antonio,CA,2017</div>
                 </div></a></li>
             <li class="work-item marketing webdesign"><a href="portfolio_single_featured_video2.html">
-                <div class="work-image"><img src="images/portfolio/gem1.jpg" alt="Portfolio Item"/></div>
+                <div class="work-image"><img src="images/portfolio/dirtyaudio1.jpg" alt="Portfolio Item"/></div>
                 <div class="work-caption font-alt">
                   <h3 class="work-title">GEM AND JAM</h3>
                   <div class="work-descr">Tucson,AZ,2017</div>
