--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <div class="row">
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-3" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="images/josh5.jpg" alt="Member Photo"/>
+                  <div class="team-image"><img src="images/dirtyaudio1.jpg" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Oh hello</h5>
                       <p class="font-serif">I like food puns</p>
@@ -373,7 +373,7 @@
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-3" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="images/CHAN1.jpg" alt="Member Photo"/>
+                  <div class="team-image"><img src="images/dirtyaudio1.jpg" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Good day sir!</h5>
                       <p class="font-serif"> I specialize in lifestyle photography and am currently DOP over at Medicine Man gallery, in Tucson AZ.</p>
@@ -388,7 +388,7 @@
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-3" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="images/team-3.jpg" alt="Member Photo"/>
+                  <div class="team-image"><img src="images/dirtyaudio1.jpg" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Hello</h5>
                       <p class="font-serif">We're currently hiring for a graphic designer!</p>
@@ -403,7 +403,7 @@
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-3" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="images/team-4.jpg" alt="Member Photo"/>
+                  <div class="team-image"><img src="images/dirtyaudio1.jpg" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Yes, this could be you</h5>
                       <p class="font-serif">Looking for a second shooter based out of Tucson or Phoenix AZ!</p>
